--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@
 [General]
 companyName = Omega International Junior School
 shortName = OIJS
+apiKey = "d61a42d239989eb9df075a70b5ad0e1435f7b186";
 
 [Database]
 hostname = localhost
