--- a/config.ini
+++ b/config.ini
@@ -11,6 +11,7 @@
 companyName = Omega International Junior School
 shortName = OIJS
 apiKey = "d61a42d239989eb9df075a70b5ad0e1435f7b186";
+file_max_size = 31457280
 
 [Database]
 hostname = localhost
