Update query builder

--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,7 @@ file_max_size = 31457280
 hostname = localhost
 username = root
 password = 
-databaseName = 
+databaseName = integrative_programming
 port = 3306
 charset= 'utf8mb4';
 
