Done Instructor Area

--- a/config.ini
+++ b/config.ini
@@ -14,12 +14,12 @@ apiKey = "d61a42d239989eb9df075a70b5ad0e1435f7b186";
 file_max_size = 31457280
 
 [Database]
-hostname = localhost
-username = root
-password = 
-databaseName = integrative_programming
-port = 3306
-charset= 'utf8mb4';
+hostname = '103.6.198.112'
+username = 'tarucbat_assignment'
+password = 'hs{MzT&ppIGk'
+databaseName = 'tarucbat_ipassignment'
+port = '3306'
+charset= 'utf8mb4'
 
 [Recaptcha]
 recaptchaPublicKey = 
