--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ companyName = Omega International Junior School
 shortName = OIJS
 apiKey = "d61a42d239989eb9df075a70b5ad0e1435f7b186";
 file_max_size = 31457280
+maintenance = false
 
 [Database]
 hostname = '103.6.198.112'
@@ -19,7 +20,7 @@ username = 'tarucbat_assignment'
 password = 'hs{MzT&ppIGk'
 databaseName = 'tarucbat_ipassignment'
 port = '3306'
-charset= 'utf8mb4'
+charset= 'utf8'
 
 [Recaptcha]
 recaptchaPublicKey = 
