forgot password done

--- a/config.ini
+++ b/config.ini
@@ -27,8 +27,8 @@ recaptchaPublicKey =
 recaptchaPrivateKey =
 
 [Mail]
-debugMode = true
+debugMode = false
 host = smtp.gmail.com
 port = 587
-username = 
-password = 
+username = 'oijsbusiness@gmail.com'
+password = 'oijs2022!@#'
